force-app/main/default/objects/Herd__c/Herd__c.object-meta.xml
<CustomObject>
    <label>Herd</label>
    <nameField>
        <displayFormat>HERD-{00000}</displayFormat>
        <label>Herd ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Herds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>