force-app/main/default/objects/Herd__c/fields/Cattle_Type__c.field-meta.xml
<CustomField>
    <fullName>Cattle_Type__c</fullName>
    <label>Cattle Breed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Africander</fullName>
            </value>
            <value>
                <fullName>Albères</fullName>
            </value>
            <value>
                <fullName>Alentejana</fullName>
            </value>
            <value>
                <fullName>Allmogekor</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>American White Park</fullName>
            </value>
            <value>
                <fullName>Amerifax</fullName>
            </value>
            <value>
                <fullName>Amrit Mahal</fullName>
            </value>
            <value>
                <fullName>Anatolian Black</fullName>
            </value>
            <value>
                <fullName>Andalusian Black</fullName>
            </value>
            <value>
                <fullName>Andalusian Grey</fullName>
            </value>
            <value>
                <fullName>Angeln</fullName>
            </value>
            <value>
                <fullName>Angus</fullName>
            </value>
            <value>
                <fullName>Ankole</fullName>
            </value>
            <value>
                <fullName>Ankole-Watusi</fullName>
            </value>
            <value>
                <fullName>Argentine Criollo</fullName>
            </value>
            <value>
                <fullName>Asturian Mountain</fullName>
            </value>
            <value>
                <fullName>Asturian Valley</fullName>
            </value>
            <value>
                <fullName>Aubrac</fullName>
            </value>
            <value>
                <fullName>Aulie-Ata</fullName>
            </value>
            <value>
                <fullName>Australian Braford</fullName>
            </value>
            <value>
                <fullName>Australian Friesian Sahiwal</fullName>
            </value>
            <value>
                <fullName>Australian Lowline</fullName>
            </value>
            <value>
                <fullName>Australian Milking Zebu</fullName>
            </value>
            <value>
                <fullName>Ayrshire</fullName>
            </value>
            <value>
                <fullName>Azaouak</fullName>
            </value>
            <value>
                <fullName>Ba-Bg</fullName>
            </value>
            <value>
                <fullName>Bachaur</fullName>
            </value>
            <value>
                <fullName>Baladi</fullName>
            </value>
            <value>
                <fullName>Baltana Romaneasca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>