force-app/main/default/objects/Herd__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Range</label>
    <referenceTo>Range__c</referenceTo>
    <relationshipLabel>Herds</relationshipLabel>
    <relationshipName>Herds</relationshipName>
    <type>Lookup</type>
</CustomField>