force-app/main/default/objects/Herd__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cattle_Type__c</columns>
    <columns>Headcount__c</columns>
    <columns>Range__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>